--- a/RikuStyleApp/WebContent/crt.css
+++ b/RikuStyleApp/WebContent/crt.css
@@ -1,5 +1,3 @@
-
-
 body {
 	margin: 0;
 	padding: 0;
@@ -32,11 +30,10 @@ body {
 
 h1 {
 	margin: 0;
-	color:red;
+	color: red;
 	padding: 0 0 20px;
 	text-align: center;
 	font-size: 22px;
-	
 }
 
 .loginbox p {
@@ -49,7 +46,8 @@ h1 {
 	width: 100%;
 	margin-bottom: 20px;
 }
-.loginbox input[type="text"], input[type="password"]{
+
+.loginbox input[type="text"], input[type="password"] {
 	border: none;
 	border-bottom: 1px solid #fff;
 	background: transparent;
@@ -58,6 +56,7 @@ h1 {
 	color: #fff;
 	font-size: 16px;
 }
+
 .loginbox input[type="submit"] {
 	border: none;
 	outline: none;
@@ -67,21 +66,26 @@ h1 {
 	font-size: 18px;
 	border-radius: 20px;
 }
+
 .loginbox input[type="submit"]:hover {
 	cursor: pointer;
 	background: #ffc107;
 	color: #000;
 }
-.loginbox a{
+
+.loginbox a {
 	text-decoration: none;
 	font-size: 12px;
 	line-height: 20px;
 	color: darkgrey;
 }
-.loginbox a:hover{
+
+.loginbox a:hover {
 	color: #ffc107;
-	}
-	#hm{
-	position:absolute;
-	padding:0;
-	margin-top:-20px;}
+}
+
+#hm {
+	position: absolute;
+	padding: 0;
+	margin-top: -20px;
+}
