--- a/RikuStyleApp/WebContent/crt.css
+++ b/RikuStyleApp/WebContent/crt.css
@@ -1,14 +1,17 @@
-body {
+
+html,body {
 	margin: 0;
 	padding: 0;
-	background: url("riku.jpg");
-	background-size: cover;
+    height: 100%;
+	background: url("photos/daniel-southerland-iV46Jo-LlGE-unsplash.jpg");
+    background-size: cover;
+    background-position: center;
 	font-family: sans-serif;
 }
 
 .loginbox {
 	width: 320px;
-	height: 520px;
+	height: 510px;
 	background: black;
 	color: #fff;
 	top: 50%;
@@ -17,6 +20,7 @@ body {
 	transform: translate(-50%, -50%);
 	box-sizing: border-box;
 	padding: 70px 30px;
+    opacity: 0.8;
 }
 
 .sweet {
@@ -38,22 +42,23 @@ h1 {
 
 .loginbox p {
 	margin: 0;
-	padding: 0;
-	font-weight: bold;
+	padding:0;
+	font-weight:400;
 }
 
 .loginbox input {
 	width: 100%;
+	margin-top:-5px;
 	margin-bottom: 20px;
 }
 
 .loginbox input[type="text"], input[type="password"] {
 	border: none;
-	border-bottom: 1px solid #fff;
+	border-bottom: 1px solid #4cd137;
 	background: transparent;
 	outline: none;
 	height: 40px;
-	color: #fff;
+	color: #d1d8e0;
 	font-size: 16px;
 }
 
@@ -73,19 +78,26 @@ h1 {
 	color: #000;
 }
 
-.loginbox a {
-	text-decoration: none;
-	font-size: 12px;
-	line-height: 20px;
-	color: darkgrey;
+.loginbox a{
+    text-decoration: none;
+    color:green;
+    
 }
-
 .loginbox a:hover {
 	color: #ffc107;
 }
 
-#hm {
-	position: absolute;
-	padding: 0;
-	margin-top: -20px;
+#msg{
+    margin-top:0;
+    display: block;
+    width: 100%;
+    text-align: center;
+    background: red;
+    color:#fff; 
+    font-weight: 600;
+}
+#l1{
+    text-align: center;
+    margin-top:-5px;
+    font-weight: normal;
 }
