--- a/RikuStyleApp/WebContent/input1.css
+++ b/RikuStyleApp/WebContent/input1.css
@@ -88,13 +88,17 @@ body {
 .menu-bar ul li ul {
 	list-style: none;
 	display: none;
-	top: 59px;
-	right: 120px;
+	 TOP: 57PX;
+	RIGHT: 126PX;
+	opacity:0.8; 
 }
 
 .menu-bar ul li ul li {
 	list-style-type: none;
 	padding: 15px;
+}
+.menu-bar ul li ul li:hover {
+	background: #74b9ff;
 }
 
 .menu-bar ul li:hover ul {
