--- a/RikuStyleApp/WebContent/login.css
+++ b/RikuStyleApp/WebContent/login.css
@@ -1,10 +1,12 @@
 @charset "ISO-8859-1";
 
-body {
+html,body {
 	margin: 0;
 	padding: 0;
-	background: url("riku.jpg");
-	background-size: cover;
+    height: 100%;
+	background-image: url("photos/log.jpg");
+    background-size: cover;
+    background-position: center;
 	font-family: sans-serif;
 }
 
@@ -12,13 +14,14 @@ body {
 	width: 320px;
 	height: 420px;
 	background: black;
-	color: #fff;
+	color: #44bd32;
 	top: 50%;
 	left: 50%;
 	position: absolute;
 	transform: translate(-50%, -50%);
 	box-sizing: border-box;
 	padding: 70px 30px;
+    opacity: 0.8;
 }
 
 .sweet {
@@ -51,12 +54,13 @@ h1 {
 
 .loginbox input[type="text"], input[type="password"] {
 	border: none;
-	border-bottom: 1px solid #fff;
+	border-bottom: 1px solid #44bd32;
 	background: transparent;
 	outline: none;
 	height: 40px;
-	color: #fff;
+	color: azure;
 	font-size: 16px;
+    
 }
 
 .loginbox input[type="submit"] {
